addons/controllers/testdata/webhooks/clusterbootstrap-webhook-manifests.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tanzu-addons-manager-webhook-service
  namespace: tkg-system
spec:
  type: ExternalName
  externalName: 127.0.0.1
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    tkg.tanzu.vmware.com/addon-webhooks: "addon-webhooks"
  name: clusterbootstrap-mutating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      #placeholder for cabundle. To be modifed by patch or programatically.
      caBundle: Cg==
      service:
        name: tanzu-addons-manager-webhook-service
        namespace: tkg-system
        path: /mutate-run-tanzu-vmware-com-v1alpha3-clusterbootstrap
        port: 9443
    failurePolicy: Fail
    name: clusterbootstrap.mutating.vmware.com
    rules:
      - apiGroups:
          - run.tanzu.vmware.com
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - clusterbootstraps
    sideEffects: None
    timeoutSeconds: 30
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  labels:
    tkg.tanzu.vmware.com/addon-webhooks: "addon-webhooks"
  name: clusterbootstrap-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      #placeholder for cabundle. To be modifed by patch or programatically.
      caBundle: Cg==
      service:
        name: tanzu-addons-manager-webhook-service
        namespace: tkg-system
        path: /validate-run-tanzu-vmware-com-v1alpha3-clusterbootstrap
        port: 9443
    failurePolicy: Fail
    name: clusterbootstrap.validating.vmware.com
    rules:
      - apiGroups:
          - run.tanzu.vmware.com
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - clusterbootstraps
    sideEffects: None
    timeoutSeconds: 30
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      #placeholder for cabundle. To be modifed by patch or programatically.
      caBundle: Cg==
      service:
        name: tanzu-addons-manager-webhook-service
        namespace: tkg-system
        path: /validate-run-tanzu-vmware-com-v1alpha3-clusterbootstraptemplate
        port: 9443
    failurePolicy: Fail
    name: clusterbootstraptemplate.validating.vmware.com
    rules:
      - apiGroups:
          - run.tanzu.vmware.com
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - clusterbootstraptemplates
    sideEffects: None
    timeoutSeconds: 30
